variables.RunFour.scala.error
Erreur de compilation :
RunFour:7: error: '(' expected but identifier found.
  if estSurBiscuit(){
     ^RunFour:10: error: illegal start of simple expression
} 
^