variables.RunFour.scala.code
var a=0
if (a==4){
  stop
}
while (true){
  avance();
  if estSurBiscuit(){
    a=a+1
  }
}